# pydantic_vs_beartype

./: README.md  main.py  pyproject.toml
